k8s/tools/dozzle/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: tools
  labels:
    app: dozzle
