k8s/tools/dozzle/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dozzle
  namespace: default
  labels:
    app: dozzle
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: dozzle
  template:
    metadata:
      labels:
        app: dozzle
    spec:
      serviceAccountName: pod-viewer
      containers:
        - name: dozzle
          image: amir20/dozzle:latest
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
