k8s/tools/dozzle/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: dozzle-service
  namespace: default
  labels:
    app: dozzle
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app: dozzle
